--- a/web-sample/build.gradle
+++ b/web-sample/build.gradle
@@ -11,5 +11,27 @@ repositories {
 }
 
 dependencies {
+    compile 'org.springframework:spring-context:4.2.5.RELEASE',
+            'org.springframework:spring-core:4.2.5.RELEASE',
+            'org.springframework:spring-beans:4.2.5.RELEASE',
+            'org.springframework:spring-expression:4.2.5.RELEASE',
+            'org.springframework:spring-context-support:4.2.5.RELEASE',
+            'org.springframework:spring-jdbc:4.2.5.RELEASE',
+            'org.springframework:spring-tx:4.2.5.RELEASE',
+            'org.springframework:spring-web:4.2.5.RELEASE',
+            'org.springframework:spring-webmvc:4.2.5.RELEASE',
+            'org.springframework:spring-aspects:4.2.5.RELEASE',
+            'org.springframework:spring-aop:4.2.5.RELEASE',
+            'org.springframework:spring-oxm:4.2.5.RELEASE',
+            'org.springframework:spring-test:4.2.5.RELEASE',
+//            'org.apache.shiro:shiro-core:1.2.4',
+//            'org.apache.shiro:shiro-web:1.2.4',
+//            'org.apache.shiro:shiro-spring:1.2.4',
+            'com.google.guava:guava:19.0',
+            'com.google.protobuf:protobuf-java:3.0.0',
+            /* Servlet */
+            'javax.servlet:javax.servlet-api:3.0.1',
+            'javax.servlet.jsp:jsp-api:2.2',
+            'javax.servlet.jsp.jstl:javax.servlet.jsp.jstl-api:1.2.1'
     testCompile 'junit:junit:4.12'
 }
