--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,9 @@ repositories {
 }
 
 dependencies {
+    compile 'org.slf4j:slf4j-api:1.7.21',
+            'ch.qos.logback:logback-core:1.1.7',
+            'ch.qos.logback:logback-classic:1.1.7',
+            'ch.qos.logback:logback-access:1.1.7'
     testCompile 'junit:junit:4.12'
 }
