--- a/web-sample/build.gradle
+++ b/web-sample/build.gradle
@@ -28,6 +28,9 @@ dependencies {
             'com.google.code.gson:gson:2.7',
             'com.google.guava:guava:19.0',
             'com.google.protobuf:protobuf-java:3.0.0',
+            'org.hibernate:hibernate-validator:5.2.4.Final',
+            'javax.validation:validation-api:1.1.0.Final',
+            'javax.el:javax.el-api:3.0.0',
             /* Servlet */
             'javax.servlet:javax.servlet-api:3.0.1',
             'javax.servlet.jsp:jsp-api:2.2',
