添加validator示例,升级spring版本为4.3.2

--- a/web-sample/build.gradle
+++ b/web-sample/build.gradle
@@ -11,19 +11,19 @@ repositories {
 }
 
 dependencies {
-    compile 'org.springframework:spring-context:4.2.5.RELEASE',
-            'org.springframework:spring-core:4.2.5.RELEASE',
-            'org.springframework:spring-beans:4.2.5.RELEASE',
-            'org.springframework:spring-expression:4.2.5.RELEASE',
-            'org.springframework:spring-context-support:4.2.5.RELEASE',
-            'org.springframework:spring-jdbc:4.2.5.RELEASE',
-            'org.springframework:spring-tx:4.2.5.RELEASE',
-            'org.springframework:spring-web:4.2.5.RELEASE',
-            'org.springframework:spring-webmvc:4.2.5.RELEASE',
-            'org.springframework:spring-aspects:4.2.5.RELEASE',
-            'org.springframework:spring-aop:4.2.5.RELEASE',
-            'org.springframework:spring-oxm:4.2.5.RELEASE',
-            'org.springframework:spring-test:4.2.5.RELEASE',
+    compile 'org.springframework:spring-context:4.3.2.RELEASE',
+            'org.springframework:spring-core:4.3.2.RELEASE',
+            'org.springframework:spring-beans:4.3.2.RELEASE',
+            'org.springframework:spring-expression:4.3.2.RELEASE',
+            'org.springframework:spring-context-support:4.3.2.RELEASE',
+            'org.springframework:spring-jdbc:4.3.2.RELEASE',
+            'org.springframework:spring-tx:4.3.2.RELEASE',
+            'org.springframework:spring-web:4.3.2.RELEASE',
+            'org.springframework:spring-webmvc:4.3.2.RELEASE',
+            'org.springframework:spring-aspects:4.3.2.RELEASE',
+            'org.springframework:spring-aop:4.3.2.RELEASE',
+            'org.springframework:spring-oxm:4.3.2.RELEASE',
+            'org.springframework:spring-test:4.3.2.RELEASE',
             /* Tools */
             'com.google.code.gson:gson:2.7',
             'com.google.guava:guava:19.0',
@@ -31,6 +31,8 @@ dependencies {
             'org.hibernate:hibernate-validator:5.2.4.Final',
             'javax.validation:validation-api:1.1.0.Final',
             'javax.el:javax.el-api:3.0.0',
+            'org.apache.commons:commons-collections4:4.1',
+            'javax.inject:javax.inject:1',
             /* Servlet */
             'javax.servlet:javax.servlet-api:3.0.1',
             'javax.servlet.jsp:jsp-api:2.2',
