--- a/build.gradle
+++ b/build.gradle
@@ -16,3 +16,7 @@ dependencies {
             'ch.qos.logback:logback-access:1.1.7'
     testCompile 'junit:junit:4.12'
 }
+
+task wrapper(type : Wrapper) {
+    gradleVersion = '3.0'
+}
