--- a/rpc-sample/build.gradle
+++ b/rpc-sample/build.gradle
@@ -24,6 +24,10 @@ dependencies {
             'org.springframework:spring-aop:4.3.2.RELEASE',
             'org.springframework:spring-oxm:4.3.2.RELEASE',
             'org.springframework:spring-test:4.3.2.RELEASE',
+            /* bytecode */
+            'org.javassist:javassist:3.21.0-GA',
+            'org.ow2.asm:asm:5.1',
+            'cglib:cglib-nodep:3.2.4',
             /* Tools */
             'javax.inject:javax.inject:1',
             'com.google.protobuf:protobuf-java:3.0.0',
